--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body, h1, h2, h3, p, ul, li {
 /* Global styles */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f7f7f7;
+    background-color: #f7f7f7; /* Set the background color to white */
     color: #333;
 }
 
@@ -41,10 +41,6 @@ body {
     display: flex;
 }
 
-.nav-links li {
-    margin-right: 15px;
-}
-
 .nav-links a {
     text-decoration: none;
     color: #fff;
@@ -59,13 +55,15 @@ body {
 .hero {
     text-align: center;
     padding: 100px 0;
+    background-color: #fff; /* Set the background color to white */
 }
 
 .profile-img {
-    border-radius: 50%;
+    /* Remove border-radius property to display picture in its original shape */
     width: 150px;
     height: 150px;
     margin-bottom: 20px;
+    background-color: #fff; /* Set the background color to white */
 }
 
 .hero-title {
@@ -84,17 +82,9 @@ body {
     margin-bottom: 20px;
 }
 
-/* Footer styles */
-.footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-}
-
 /* Override your existing style for <p> */
 p {
-    color: #333; /* Reset the color to default */
+    color: #333;
     font-size: 16px;
     line-height: 1.5;
     margin-bottom: 10px;
